ros_workspace/log/build_2020-12-02_04-14-04/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 44
    temp = line[]
                ^
SyntaxError: invalid syntax

